Hive Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

    HIVE-194. Support specifying decimal places for ROUND function.
    ROUND always rounds away from zero now. (David Phillips via zshao)

  NEW FEATURES

    HIVE-216. Generate ruby bindings for service. (Raghotham Murthy via zshao)

    HIVE-163. JSON udf function added. (Hao Liu via zshao)

    HIVE-142. Add a metastore check command. (Johan Oskarsson via zshao)

    HIVE-148. Extend bin/hive to include the lineage tool.
    (Suresh Antony via zshao)

    HIVE-147. Add a tool for extracting lineage info from hive sql.
    (Suresh Antony via zshao)

    HIVE-140. Event Based Infrastructure for Syntax Trees in the compiler.
    (Ashish Thusoo through zshao)

    HIVE-98. Dependency management with hadoop core using ivy.
    (Ashish Thusoo through zshao)

    HIVE-73. Thrift Server and Client for Hive (Raghu through zshao)

    HIVE-113. Distribute by and sort by support. (zshao)

    HIVE-118. Add date related functions. (zshao)

    HIVE-62. Support nested types.
    (Ashish Thusoo via dhruba)

  IMPROVEMENTS

    HIVE-240. Support CREATE TABLE IF NOT EXISTS. (zshao)

    HIVE-126. Don't fetch information on Partitions from HDFS instead of
    MetaStore.  (Johan Oskarsson via zshao)

    HIVE-209. Enabling asserts in tests. (Prasad Chakka via zshao)

    HIVE-177. Allow specifying custom input and output format in CREATE TABLE.
    (David Phillips via zshao)

    HIVE-166. Create eclipse project template. (Ashish Thusoo via zshao)

    HIVE-186. Refactor code to use a single graph, nodeprocessor, dispatcher
    and rule abstraction. (Ashish Thusoo via zshao)

    HIVE-182. Add database name parameter to getTable and dropTable.
    (Johan Oskarsson via zshao)

    HIVE-181. Restore UDFTestLength unit test for UDFs.
    (David Phillips via zshao)

    HIVE-107. Case structure for bin/hive. (Edward Capriolo via zshao)

    HIVE-101. Set svn:ignore for the root. (Johan Oskarsson via zshao)
